# jet-pilot

./: .commitlintrc.yml  .eslintrc-auto-import.json  .gitignore  CHANGES.md  README.md  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml  renovate.json
.github/workflows/: build.yml  pr-semantic.yml  release.yml  semantic-release.yml  test-build.yml  test.yml
.husky/: commit-msg
src/: App.vue  main.d.ts  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: kubernetes.rs  logs.rs  main.rs  shell.rs
src-tauri/src/crates/access_log_parser/: Cargo.toml
src-tauri/src/crates/access_log_parser/src/: lib.rs
src-tauri/src/crates/access_log_parser/src/parsers/: compound.rs  core.rs  mod.rs
src/actions/: cronjobs.ts  deployments.ts  events.ts  helm-release.ts  nodes.ts  replicasets.ts  scalables.ts  services.ts  statefulsets.ts
src/assets/: main.postcss  port_forwarding.json
src/assets/spec-templates/: configmap.ts  cronjob.ts  default.ts  deployment.ts  ingress.ts  job.ts  pvc.ts  secret.ts  service.ts
src/command-palette/: SwitchContext.ts  index.ts
src/components/: AppLayout.vue  AuthCheck.vue  CommandPalette.vue  ContextSwitcher.vue  DetailPanel.vue  DialogHandler.vue  Loading.vue  Navigation.vue  NavigationGroup.vue  NavigationItem.vue  NavigationItemIcon.vue  PortForwardingManager.vue  RouterViewport.vue  SidePanel.vue  Spinner.vue  TabIcon.vue  TabOrchestrator.vue  UpdateHandler.vue  WhatsNew.vue
src/components/generic/: Events.vue  MetadataAnnotationsLabels.vue
src/components/monaco/themes/: BrillianceBlack.ts  GithubLight.ts
src/components/settings/: Navigation.vue  NavigationItem.vue
src/components/tables/: ColumnDefinitions.ts  configmaps.ts  cronjobs.ts  deployments.ts  events.ts  generic.ts  helm-chart.ts  helm-release.ts  ingresses.ts  jobs.ts  multicontext.ts  namespaces.ts  nodes.ts  persistentvolumeclaims.ts  pods.ts  replicasets.ts  replicationcontrollers.ts  secrets.ts  services.ts  statefulsets.ts  types.ts  virtualservices.ts
src/components/tables/configmaps/: columns.ts
src/components/tables/deployments/: columns.ts
src/components/tables/persistentvolumeclaims/: columns.ts
src/components/tables/services/: columns.ts
src/components/tables/virtualservices/: columns.ts
src/components/ui/: DataTable.vue  DataTableManager.vue  MultiSelect.vue  PodUsageChart.vue  PodUsageChartBar.vue  SpotlightGridContainer.vue  UnmanagedVirtualDataTable.vue  VirtualDataTable.vue
src/components/ui/accordion/: AccordionContent.vue
src/components/ui/button/: index.ts
src/components/ui/carousel/: Carousel.vue  CarouselNext.vue  CarouselPrevious.vue
src/components/ui/command/: Command.vue  CommandDialog.vue  CommandInput.vue  CommandItem.vue
src/components/ui/dialog/: Dialog.vue  DialogContent.vue
src/components/ui/dropdown-menu/: DropdownMenuContent.vue
src/components/ui/input/: Input.vue
src/components/ui/scroll-area/: ScrollArea.vue  ScrollBar.vue
src/components/ui/table/: Table.vue  TableHead.vue  TableHeader.vue  TableRow.vue
src/components/ui/tags-input/: TagsInputItemText.vue
src/components/ui/toast/: ToastViewport.vue  use-toast.ts
src/components/vue-flow/: ObjectNode.vue  PodsObjectNode.vue
src/components/whats-new/: 1-29-0.vue  1-30-0.vue  Updates.vue  metadata.json
src/composables/: refresher.ts  useDagreLayout.ts  useLogViewer.ts
src/lib/: kubernetesSpecLinks.ts  logger.ts  unitParsers.ts  utils.ts
src/providers/: ColorSchemeProvider.ts  CommandPaletteProvider.ts  DialogProvider.ts  GlobalShortcutProvider.ts  KubeContextProvider.ts  PanelProvider.ts  PortForwardingProvider.ts  SettingsContextProvider.ts  TabProvider.ts
src/services/: Kubernetes.ts
src/views/: ClusterOverview.vue  ConfigMaps.vue  CronJobs.vue  Deployments.vue  Describe.vue  GenericResource.vue  HelmResource.vue  Ingresses.vue  Jobs.vue  LogViewer.vue  NoContext.vue  ObjectEditor.vue  PersistentVolumeClaims.vue  Pods.vue  Secrets.vue  Services.vue  Settings.vue  Shell.vue  StructuredLogViewer.vue  VirtualServices.vue
src/views/dialogs/: HelmRollback.vue  PortForward.vue  ScaleResource.vue
src/views/panels/: PodDetails.vue  Resource.vue  SecretEditor.vue
src/views/panels/resource/: Deployment.vue  Secret.vue
src/views/settings/: Appearance.vue  Clusters.vue  Contexts.vue  General.vue  Logs.vue
src/views/settings/general/: KubeConfigListBox.vue
