[package]
name = "jet_pilot"
version = "0.0.1"
description = "JET Pilot - K8s management made easy"
authors = ["Jeroen Nijhuis"]
license = "MIT"
repository = "https://github.com/unxsist/jet-pilot"
default-run = "jet_pilot"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0.100"
serde = { version = "1.0.167", features = ["derive"] }
tauri = { version = "1.4.1", features = [ "macos-private-api", "api-all"] }
tokio = "1.29.1"
kube = { version = "0.84.0", features = ["runtime", "derive", "client", "rustls-tls"], default-features = false }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
istio-sdk = { version = "0.1.3", features = ["v1_18"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", branch = "dev" }
portable-pty = "0.8.1"
uuid = "1.4.1"
either = "1.9.0"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel" }
window-vibrancy = "0.4.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
