[package]
name = "jet_pilot"
version = "0.0.1"
description = "JET Pilot - K8s management made easy"
authors = ["Jeroen Nijhuis"]
license = "MIT"
repository = "https://github.com/unxsist/jet-pilot"
default-run = "jet_pilot"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0.100"
serde = { version = "1.0.167", features = ["derive"] }
tauri = { version = "1.6.2", features = [ "updater", "macos-private-api", "api-all"] }
tokio = "1.29.1"
kube = { version = "0.87.2", features = ["socks5"] }
k8s-openapi = { version = "0.20.0", features = ["v1_26"] }
istio-api-rs = { version = "0.7.0", features = ["v1_20"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", branch = "dev" }
portable-pty = "0.8.1"
uuid = { version = "1.4.1", features = ["serde"] }
either = "1.9.0"
k8s-metrics = "0.14.0"
access_log_parser = { version = "0.8.0", path = "src/crates/access_log_parser" }

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel" }
window-vibrancy = "0.4.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
