[package]
name = "jet_pilot"
version = "0.0.1"
description = "JET Pilot - K8s management made easy"
authors = ["Jeroen Nijhuis"]
license = "MIT"
repository = "https://github.com/unxsist/jet-pilot"
default-run = "jet_pilot"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1.0.106"

[dependencies]
serde_json = "1.0.100"
serde = { version = "1.0.167", features = ["derive"] }
tauri = { version = "2", features = ["macos-private-api"] }
tokio = "1.29.1"
kube = { version = "0.93.1", features = ["socks5", "http-proxy"] }
k8s-openapi = { version = "0.22.0", features = ["v1_30"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", branch = "dev" }
portable-pty = "0.8.1"
uuid = { version = "1.4.1", features = ["serde"] }
either = "1.9.0"
k8s-metrics = "0.16.0"
access_log_parser = { version = "0.8.0", path = "src/crates/access_log_parser" }
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
rand = "0.8.5"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
window-vibrancy = "0.4.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
